--- a/docs/api/CommonBotLibrary.Tokens.GithubCredentials.yml
+++ b/docs/api/CommonBotLibrary.Tokens.GithubCredentials.yml
@@ -1,30 +1,31 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates
-  commentId: T:CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates
-  id: OpenWeatherMapResult.Coordinates
-  parent: CommonBotLibrary.Services.Models
+- uid: CommonBotLibrary.Tokens.GithubCredentials
+  commentId: T:CommonBotLibrary.Tokens.GithubCredentials
+  id: Tokens.GithubCredentials
+  parent: CommonBotLibrary
   children:
-  - CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.#ctor(JToken,JToken)
-  - CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Latitude
-  - CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Longitude
+  - CommonBotLibrary.Tokens.GithubCredentials.#ctor(System.String,System.String,System.String)
+  - CommonBotLibrary.Tokens.GithubCredentials.OAuth
+  - CommonBotLibrary.Tokens.GithubCredentials.Repository
+  - CommonBotLibrary.Tokens.GithubCredentials.Username
   langs:
   - csharp
   - vb
-  name: OpenWeatherMapResult.Coordinates
-  nameWithType: OpenWeatherMapResult.Coordinates
-  fullName: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates
+  name: Tokens.GithubCredentials
+  nameWithType: Tokens.GithubCredentials
+  fullName: CommonBotLibrary.Tokens.GithubCredentials
   type: Class
   source:
-    id: Coordinates
+    id: GithubCredentials
     path: ''
-    startLine: 2024
+    startLine: 26
   assemblies:
   - cs.temp.dll
-  namespace: CommonBotLibrary.Services.Models
+  namespace: CommonBotLibrary
   syntax:
-    content: public class Coordinates
-    content.vb: Public Class Coordinates
+    content: public class GithubCredentials
+    content.vb: Public Class GithubCredentials
   inheritance:
   - System.Object
   inheritedMembers:
@@ -41,106 +42,139 @@ items:
   modifiers.vb:
   - Public
   - Class
-- uid: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Latitude
-  commentId: P:CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Latitude
-  id: Latitude
-  parent: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates
+- uid: CommonBotLibrary.Tokens.GithubCredentials.#ctor(System.String,System.String,System.String)
+  commentId: M:CommonBotLibrary.Tokens.GithubCredentials.#ctor(System.String,System.String,System.String)
+  id: '#ctor(System.String,System.String,System.String)'
+  parent: CommonBotLibrary.Tokens.GithubCredentials
   langs:
   - csharp
   - vb
-  name: Latitude
-  nameWithType: OpenWeatherMapResult.Coordinates.Latitude
-  fullName: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Latitude
-  type: Property
-  source:
-    id: Latitude
-    path: ''
-    startLine: 2027
-  assemblies:
-  - cs.temp.dll
-  namespace: CommonBotLibrary.Services.Models
-  syntax:
-    content: public double Latitude { get; set; }
-    parameters: []
-    return:
-      type: System.Double
-    content.vb: Public Property Latitude As Double
-  overload: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Latitude*
-  modifiers.csharp:
-  - public
-  - get
-  - set
-  modifiers.vb:
-  - Public
-- uid: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Longitude
-  commentId: P:CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Longitude
-  id: Longitude
-  parent: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates
-  langs:
-  - csharp
-  - vb
-  name: Longitude
-  nameWithType: OpenWeatherMapResult.Coordinates.Longitude
-  fullName: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Longitude
-  type: Property
-  source:
-    id: Longitude
-    path: ''
-    startLine: 2028
-  assemblies:
-  - cs.temp.dll
-  namespace: CommonBotLibrary.Services.Models
-  syntax:
-    content: public double Longitude { get; set; }
-    parameters: []
-    return:
-      type: System.Double
-    content.vb: Public Property Longitude As Double
-  overload: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Longitude*
-  modifiers.csharp:
-  - public
-  - get
-  - set
-  modifiers.vb:
-  - Public
-- uid: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.#ctor(JToken,JToken)
-  commentId: M:CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.#ctor(JToken,JToken)
-  id: '#ctor(JToken,JToken)'
-  parent: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates
-  langs:
-  - csharp
-  - vb
-  name: Coordinates(JToken, JToken)
-  nameWithType: OpenWeatherMapResult.Coordinates.Coordinates(JToken, JToken)
-  fullName: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Coordinates(JToken, JToken)
+  name: GithubCredentials(String, String, String)
+  nameWithType: Tokens.GithubCredentials.GithubCredentials(String, String, String)
+  fullName: CommonBotLibrary.Tokens.GithubCredentials.GithubCredentials(System.String, System.String, System.String)
   type: Constructor
   source:
     id: .ctor
     path: ''
-    startLine: 2030
+    startLine: 28
   assemblies:
   - cs.temp.dll
-  namespace: CommonBotLibrary.Services.Models
+  namespace: CommonBotLibrary
   syntax:
-    content: public Coordinates(JToken lat, JToken lon)
+    content: public GithubCredentials(string username, string repository, string oauth)
     parameters:
-    - id: lat
-      type: JToken
-    - id: lon
-      type: JToken
-    content.vb: Public Sub New(lat As JToken, lon As JToken)
-  overload: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.#ctor*
+    - id: username
+      type: System.String
+    - id: repository
+      type: System.String
+    - id: oauth
+      type: System.String
+    content.vb: Public Sub New(username As String, repository As String, oauth As String)
+  overload: CommonBotLibrary.Tokens.GithubCredentials.#ctor*
   modifiers.csharp:
   - public
   modifiers.vb:
   - Public
+- uid: CommonBotLibrary.Tokens.GithubCredentials.Username
+  commentId: P:CommonBotLibrary.Tokens.GithubCredentials.Username
+  id: Username
+  parent: CommonBotLibrary.Tokens.GithubCredentials
+  langs:
+  - csharp
+  - vb
+  name: Username
+  nameWithType: Tokens.GithubCredentials.Username
+  fullName: CommonBotLibrary.Tokens.GithubCredentials.Username
+  type: Property
+  source:
+    id: Username
+    path: ''
+    startLine: 32
+  assemblies:
+  - cs.temp.dll
+  namespace: CommonBotLibrary
+  syntax:
+    content: public string Username { set; }
+    parameters: []
+    return:
+      type: System.String
+    content.vb: Public WriteOnly Property Username As String
+  overload: CommonBotLibrary.Tokens.GithubCredentials.Username*
+  modifiers.csharp:
+  - public
+  - set
+  modifiers.vb:
+  - Public
+  - WriteOnly
+- uid: CommonBotLibrary.Tokens.GithubCredentials.Repository
+  commentId: P:CommonBotLibrary.Tokens.GithubCredentials.Repository
+  id: Repository
+  parent: CommonBotLibrary.Tokens.GithubCredentials
+  langs:
+  - csharp
+  - vb
+  name: Repository
+  nameWithType: Tokens.GithubCredentials.Repository
+  fullName: CommonBotLibrary.Tokens.GithubCredentials.Repository
+  type: Property
+  source:
+    id: Repository
+    path: ''
+    startLine: 33
+  assemblies:
+  - cs.temp.dll
+  namespace: CommonBotLibrary
+  syntax:
+    content: public string Repository { set; }
+    parameters: []
+    return:
+      type: System.String
+    content.vb: Public WriteOnly Property Repository As String
+  overload: CommonBotLibrary.Tokens.GithubCredentials.Repository*
+  modifiers.csharp:
+  - public
+  - set
+  modifiers.vb:
+  - Public
+  - WriteOnly
+- uid: CommonBotLibrary.Tokens.GithubCredentials.OAuth
+  commentId: P:CommonBotLibrary.Tokens.GithubCredentials.OAuth
+  id: OAuth
+  parent: CommonBotLibrary.Tokens.GithubCredentials
+  langs:
+  - csharp
+  - vb
+  name: OAuth
+  nameWithType: Tokens.GithubCredentials.OAuth
+  fullName: CommonBotLibrary.Tokens.GithubCredentials.OAuth
+  type: Property
+  source:
+    id: OAuth
+    path: ''
+    startLine: 34
+  assemblies:
+  - cs.temp.dll
+  namespace: CommonBotLibrary
+  syntax:
+    content: public string OAuth { set; }
+    parameters: []
+    return:
+      type: System.String
+    content.vb: Public WriteOnly Property OAuth As String
+  overload: CommonBotLibrary.Tokens.GithubCredentials.OAuth*
+  modifiers.csharp:
+  - public
+  - set
+  modifiers.vb:
+  - Public
+  - WriteOnly
 references:
-- uid: CommonBotLibrary.Services.Models
-  commentId: N:CommonBotLibrary.Services.Models
+- uid: CommonBotLibrary
+  commentId: N:CommonBotLibrary
   isExternal: false
-  name: CommonBotLibrary.Services.Models
-  nameWithType: CommonBotLibrary.Services.Models
-  fullName: CommonBotLibrary.Services.Models
+  name: CommonBotLibrary
+  nameWithType: CommonBotLibrary
+  fullName: CommonBotLibrary
 - uid: System.Object
   commentId: T:System.Object
   parent: System
@@ -433,33 +467,34 @@ references:
   name: System
   nameWithType: System
   fullName: System
-- uid: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Latitude*
-  commentId: Overload:CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Latitude
+- uid: CommonBotLibrary.Tokens.GithubCredentials.#ctor*
+  commentId: Overload:CommonBotLibrary.Tokens.GithubCredentials.#ctor
   isExternal: false
-  name: Latitude
-  nameWithType: OpenWeatherMapResult.Coordinates.Latitude
-  fullName: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Latitude
-- uid: System.Double
-  commentId: T:System.Double
+  name: GithubCredentials
+  nameWithType: Tokens.GithubCredentials.GithubCredentials
+  fullName: CommonBotLibrary.Tokens.GithubCredentials.GithubCredentials
+- uid: System.String
+  commentId: T:System.String
   parent: System
   isExternal: true
-  name: Double
-  nameWithType: Double
-  fullName: System.Double
-- uid: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Longitude*
-  commentId: Overload:CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Longitude
+  name: String
+  nameWithType: String
+  fullName: System.String
+- uid: CommonBotLibrary.Tokens.GithubCredentials.Username*
+  commentId: Overload:CommonBotLibrary.Tokens.GithubCredentials.Username
   isExternal: false
-  name: Longitude
-  nameWithType: OpenWeatherMapResult.Coordinates.Longitude
-  fullName: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Longitude
-- uid: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.#ctor*
-  commentId: Overload:CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.#ctor
+  name: Username
+  nameWithType: Tokens.GithubCredentials.Username
+  fullName: CommonBotLibrary.Tokens.GithubCredentials.Username
+- uid: CommonBotLibrary.Tokens.GithubCredentials.Repository*
+  commentId: Overload:CommonBotLibrary.Tokens.GithubCredentials.Repository
   isExternal: false
-  name: Coordinates
-  nameWithType: OpenWeatherMapResult.Coordinates.Coordinates
-  fullName: CommonBotLibrary.Services.Models.OpenWeatherMapResult.Coordinates.Coordinates
-- uid: JToken
-  isExternal: true
-  name: JToken
-  nameWithType: JToken
-  fullName: JToken
+  name: Repository
+  nameWithType: Tokens.GithubCredentials.Repository
+  fullName: CommonBotLibrary.Tokens.GithubCredentials.Repository
+- uid: CommonBotLibrary.Tokens.GithubCredentials.OAuth*
+  commentId: Overload:CommonBotLibrary.Tokens.GithubCredentials.OAuth
+  isExternal: false
+  name: OAuth
+  nameWithType: Tokens.GithubCredentials.OAuth
+  fullName: CommonBotLibrary.Tokens.GithubCredentials.OAuth
